Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.2.0
-
None
-
Relevant Archlinux packages:
* qt5-base 5.2.0 (Qt5 base libraries)
* otf-ipafont 003.03 (japanese fonts)
* harfbuzz 0.9.24
-
11fe2bcd7b3b62e61b06b1bc0794cd538431a696 b7f013bf1919486dab56a4436a17a3878341a1d5
Description
All of the Qt5 apps cannot display correctly some japanese characters, showing squares instead.
Steps to reproduce:
- Open any Qt5 application that have a text field (used Qt designer).
- Paste 初音ミク on any text field (used the filter box)
- The last two characters shows as squares.
Archlinux bug report: https://bugs.archlinux.org/task/38430
Attachments
Issue Links
- relates to
-
QTBUG-29930 Unicode script itemization code needs to be re-worked
-
- Open
-
-
QTBUG-18980 Use harfbuzz-ng for text layout
-
- Closed
-